// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> renders icon correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi bLHGFU"
    data-autoid="box"
  >
    <div
      class="sc-gsnTZi cXXFdo sc-dkzDqf laIHWJ"
      data-autoid="github_icon"
    >
      <svg
        data-name="fallback-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <line
          x1="12"
          x2="12.01"
          y1="17"
          y2="17"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Avatar /> renders img correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi bLHGFU"
    data-autoid="box"
  >
    <img
      src="https://picsum.photos/id/237/200"
      style="width: 48px; height: 48px;"
    />
  </div>
</DocumentFragment>
`;

exports[`<Avatar /> renders text correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-gsnTZi bLHGFU"
    data-autoid="box"
  >
    <div
      class="sc-gsnTZi dOBAhX"
      data-autoid="box"
    >
      <span
        class="sc-eCYdqJ ioxSTN"
        data-autoid=""
      >
        TT
      </span>
    </div>
  </div>
</DocumentFragment>
`;
